# School-Work

./: .gitattributes  .gitignore  README.md  accounts.pkl
Api test/: Api test.sln  Api test.vcxproj  main.cpp
Bank/: Bank.sln  Bank.vcxproj  Bank.vcxproj.filters  log.txt  main.cpp
Chat_Client/: client-cert.pem  client-key.pem  mysql.cpp  server-ca.pem
atm/: atm.py
bank/: Cargo.toml  accounts.txt
bank/src/: main.rs
banking system/: main.cpp
bil/: car.py  main.py
calculator/: main.py
chat client/: app.js  package-lock.json  package.json
chat_client/: CMakeLists.txt  Chat_Client.cpp  main.cpp
company home page with flexbox/: index.html  style.css
discord/: package-lock.json  package.json  tailwind.config.ts
discordclone/client/DiscordClone/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
discordclone/client/DiscordClone/src-tauri/src/: main.rs
dogs/: app.js
fordon/: car.py  fordon.py  main.py  trailer.py
fruit/: fruit.py
get-social/: get-social.py
glosor/: .env  Cargo.toml
glosor/src/: db.rs  main.rs  test_manager.rs
guess the number/: geuss_the_number.py
mini games/: main.cpp  mini games.sln  mini games.vcxproj  mini games.vcxproj.filters
rpg/: Cargo.toml  main.lua  main.py  package-lock.json  package.json
save to file/: main.py
scheduling app/: app.js  package-lock.json  package.json
student manager/: main.cpp  student manager.sln  student manager.vcxproj  students.txt
studentmanager/: Source.cpp  studentmanager.sln  studentmanager.vcxproj  studentmanager.vcxproj.filters  students.txt
template/: Project1.vcxproj  main.cpp  template.sln
test_weather_app/: Cargo.toml
växlare/: main.cpp  växlare.sln  växlare.vcxproj
weather_app/: .env  Cargo.toml  index.js  package-lock.json  package.json
(+123 files in other folders)
