[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.15"
eframe = "0.15"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8.4"
mongodb = "2.8.2"
bsod = "0.1.1"
winit = "0.30.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
bson = "2.10.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"

[package.metadata.windows]
resource = ["bank.exe.manifest"]