[package]
name = "glosor"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


