[package]
name = "discordclone"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "0.3"
tauri = "1.0.0-beta.5"
futures = "0.3.30"

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.15"
once_cell = "1.8"
futures = "0.3.30"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
